# infoMatrix

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Casks/: infomatrix.rb
apps/apple/: .gitignore  Package.swift
apps/apple/Entitlements/: InfoMatrix-macOS-adhoc.entitlements
apps/apple/Shared/: AppState.swift  CloudKitSyncManager.swift  InfoMatrixApp.swift  InfoMatrixCore.h  Models.swift  NativeReaderService.swift  ReaderPresentation.swift  ReaderService.swift  ReaderShellView.swift  module.modulemap
apps/apple/Tests/InfoMatrixShellTests/: AppStateTests.swift  NativeReaderServiceTests.swift
apps/apple/XcodeGen/: project.yml
apps/apple/XcodeGen/InfoMatrix.xcodeproj/: project.pbxproj
apps/apple/XcodeGen/InfoMatrix.xcodeproj/xcshareddata/xcschemes/: InfoMatrix-iOS.xcscheme  InfoMatrix-iPadOS.xcscheme  InfoMatrix-macOS.xcscheme  InfoMatrixShellTests.xcscheme
apps/apple/iOS/: README.md
apps/apple/iOS/XcodeApp/: iOSApp.swift
apps/apple/iPadOS/XcodeApp/: iPadApp.swift
apps/apple/macOS/: README.md
apps/apple/macOS/App/: InfoMatrixMacApp.swift  NotificationDeliveryCoordinator.swift
apps/apple/macOS/XcodeApp/: MacApp.swift
apps/apple/visionOS/: README.md
apps/apple/visionOS/XcodeApp/: VisionApp.swift
apps/flutter/: README.md  pubspec.yaml
apps/flutter/android/: key.properties.example
apps/flutter/android/app/: build.gradle.kts
apps/flutter/android/app/src/main/: AndroidManifest.xml
apps/flutter/android/app/src/main/kotlin/com/infomatrix/reader/: MainActivity.kt
apps/flutter/ios/Runner/: Info.plist
apps/flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter/lib/: app.dart  main.dart
apps/flutter/lib/core/: ffi_reader_backend.dart  models.dart  reader_backend.dart  reader_presentation.dart
apps/flutter/lib/ui/: reader_shell_page.dart
apps/flutter/linux/: CMakeLists.txt
apps/flutter/linux/runner/: my_application.cc
apps/flutter/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter/test/: ffi_backend_smoke_test.dart  notification_validation_test.dart  widget_test.dart
apps/flutter/windows/: CMakeLists.txt
apps/flutter/windows/runner/: Runner.rc  main.cpp
core/: Cargo.toml
core/crates/app_core/: Cargo.toml
core/crates/app_core/src/: lib.rs
core/crates/app_core/tests/: integration.rs
core/crates/app_server/: Cargo.toml
core/crates/app_server/src/: main.rs
core/crates/discovery/: Cargo.toml
core/crates/discovery/src/: lib.rs
core/crates/fetcher/: Cargo.toml
core/crates/fetcher/src/: lib.rs
core/crates/ffi_bridge/: Cargo.toml
core/crates/ffi_bridge/src/: lib.rs
core/crates/icon/: Cargo.toml
core/crates/icon/src/: lib.rs
core/crates/models/: Cargo.toml
core/crates/models/src/: lib.rs
core/crates/notifications/: Cargo.toml
core/crates/notifications/src/: audit.rs  bridge.rs  coordinator.rs  delivery.rs  lib.rs  policy.rs  scheduler.rs
core/crates/opml/: Cargo.toml
core/crates/opml/src/: lib.rs
core/crates/parser/: Cargo.toml
core/crates/parser/src/: lib.rs
core/crates/search/: Cargo.toml
core/crates/search/src/: lib.rs
core/crates/storage/: Cargo.toml
core/crates/storage/migrations/: 0001_init.sql  0002_notifications.sql  0003_contract_fixes.sql  0004_refresh_rules.sql
core/crates/storage/src/: lib.rs
core/crates/sync/: Cargo.toml
core/crates/sync/src/: lib.rs
docs/: api-contracts.md  architecture.md  data-model.md  discovery.md  release.md  sync.md  targets.md
docs/decisions/: 0001-core-language.md  0002-ui-shell-split.md  0003-local-first.md  0004-flutter-rust-ffi-bridge.md
tests/discovery/: site_multiple_feeds.html  site_relative_links.html
tests/feeds/: malformed_feed.xml  missing_guid_rss.xml  valid_atom.xml  valid_json_feed.json  valid_rss.xml  weird_encoding.xml
tooling/scripts/: build_apple_xcframework.sh  build_flutter_ffi.sh  measure_reader_latency.sh  package_flutter_android_release.sh  package_flutter_linux_release.sh  package_flutter_windows_release.sh  package_ios_release.sh  package_macos_app.sh  package_macos_release.sh  release_check.sh  run_local_core_server.sh  run_macos_app.sh  stage_flutter_android_ffi.sh
