[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
atom_syndication.workspace = true
chrono.workspace = true
models = { path = "../models" }
rss.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions = "1"
